Load all xml files into one big module - need to figure out how to split them up with dependencies.
Modules for caldav.

Removed a bunch of dependencies on commons-codec. Added Base64 methods to Utils using javax methods.

Made CalSvcFactoryDefault.getSystemConfig a static method. Removed guestMode from calintfhelper - only used by 1 class. Start of moving guestMode/readOnly mode out and splitting all source into read-only and read-write